styles/styles.css
/* ... */
.v2-video__playback-button .icon-play-video,
.v2-video__playback-button .icon-pause-video {
  display: none;
  justify-content: center;
}

.v2-video__playback-button .icon {
  align-items: center;
  height: 100%;
}

/* stylelint-disable-next-line no-descending-specificity */
.v2-video__playback-button .icon svg {
  height: var(--playback-button-size);
  width: var(--playback-button-size);
}

/* Video mute toggle button */
.video__mute-toggle-button {
  --video-mute-toggle-button-size: 64px;
  --video-mute-toggle-button-top: 64px;

  background-color: var(--c-primary-gold);
  border: 0;
  cursor: pointer;
  height: var(--video-mute-toggle-button-size);
  padding: 0;
  position: absolute;
  right: 0;
  top: var(--video-mute-toggle-button-top);
  width: var(--video-mute-toggle-button-size);
  z-index: 1;
}

.video__mute-toggle-button:focus {
  outline: 0;
}

.video__mute-toggle-button:focus-visible {
  outline: 2px solid var(--border-focus);
  outline-offset: 2px;
}

.video__mute-toggle-button:hover {
  background-color: var(--button-primary-bg-hover);
}

.video__mute-toggle-button:active {
  background-color: var(--c-secondary-dark-gold, #87754e);
}

.video__mute-toggle-button .icon {
  /* color: var(--button-primary-bg); */
  height: 100%;
  width: 100%;
}

/* Section Background colors */
.redesign-v2 .section--primary-gray-background,
.redesign-v2 .section--black-background,
.redesign-v2 .section--graphite-background,
.redesign-v2 .section--gray-background,
.redesign-v2 .section--light-gray-background,
.redesign-v2 .section--with-background {
  --card-background: var(--c-primary-white);
  --card-text: var(--c-primary-black);

  color: var(--text-color);
  background-color: var(--section-background);
  z-index: 1;
}

.redesign-v2 .section--black-background,
.redesign-v2 .section--graphite-background {
  --navigation-line-default-color: #393939;
  --text-color: var(--c-primary-white);
  --color-icon: var(--c-primary-white);
  --text-subtle: #8d8d8d;
}

.redesign-v2 .section--primary-gray-background {
  --section-background: var(--c-primary-gray);
}

.redesign-v2 .section--black-background {
  --section-background: var(--c-primary-black);
}

.redesign-v2 .section--graphite-background {
  --section-background: var(--c-secondary-graphite);
}

.redesign-v2 .section--gray-background,
.redesign-v2 .section--light-gray-background {
  --navigation-line-default-color: var(--c-primary-white);
  --text-color: var(--c-primary-black);
  --text-subtle: #636363;
}

.redesign-v2 .section--gray-background {
  --section-background: var(--c-secondary-silver);
}

.redesign-v2 .section--light-gray-background {
  --section-background: var(--c-tertiary-light-cool-gray);
}

.redesign-v2 .section--background-with-dots {
  position: relative;
  z-index: 1;
}

.redesign-v2 .section--background-with-dots::after {
  background-image: url('../../media/dots.svg');
  background-position: top right 10px;
  bottom: 0;
  content: '';
  display: block;
  height: round(60%, 24px); /* stylelint-disable-line declaration-property-value-no-unknown */
  width: 40%;
  width: round(40%, 24px); /* stylelint-disable-line declaration-property-value-no-unknown */
  position: absolute;
  right: 0;
  z-index: 1;
}

/* stylelint-disable-next-line no-descending-specificity */
.redesign-v2 .section--background-with-dots > div {
  position: relative;
  z-index: 2;
}

.redesign-v2 .section--with-background {
  --text-color: var(--c-primary-white);

  aspect-ratio: 2 / 1;
  color: var(--text-color);
  display: flex;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: var(--section-max-width);
  position: relative;
}

.redesign-v2 .section--with-background .default-content-wrapper {
  background-color: var(--c-secondary-graphite);
}

.redesign-v2 .section--with-background > picture:first-of-type img {
  display: block;
  height: 100%;
  object-fit: cover;
  width: 100%;
}

/* End section Background colors */

/* stylelint-disable-next-line no-descending-specificity */
.redesign-v2 .section {
  padding: var(--section-padding-top) 0 var(--section-padding-bottom);
  scroll-margin-top: calc(var(--nav-height) + var(--inpage-navigation-height));
  display: flex;
  flex-flow: column;
  gap: var(--section-gap);
}

.redesign-v2 .section--no-gap,
.redesign-v2 .v2-icon-cards-container,
.v2-breadcrumb-container.v2-hero-container,
.redesign-v2 .v2-icon-cards-container:not(.section--with-background) {
  gap: 0;
}

.redesign-v2 .section--no-vertical-padding {
  --section-padding-top: 0;
  --section-padding-bottom: 0;
}

/* stylelint-disable-next-line no-descending-specificity */
.redesign-v2 .section > div {
  padding: var(--section-div-padding);
  max-width: var(--wrapper-width);
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

/* Remove padding top of consecutive sections with background image or colors */
.redesign-v2:not:has(main.error) .section:first-child,
.redesign-v2 .v2-testimonial-container,
.redesign-v2 .v2-feature-carousel-container,
.redesign-v2 .v2-intro-section-container,
.redesign-v2 .section + .section--with-background,
.redesign-v2 .section--light-gray-background:has(.v2-pencil-promo__pencil-banner),
.redesign-v2 .section--gray-background:has(.v2-pencil-promo__pencil-banner),
.redesign-v2 .section--graphite-background:has(.v2-pencil-promo__pencil-banner),
.redesign-v2 .section--black-background:has(.v2-pencil-promo__pencil-banner) {
  --section-padding-top: 0;
}

/* stylelint-disable-next-line no-descending-specificity */
.redesign-v2 .section--with-background,
.redesign-v2 .v2-feature-carousel-container,
.redesign-v2 .v2-intro-section-container,
.redesign-v2 .v2-testimonial-container {
  --section-padding-bottom: 0;
}

/* Prevent padding in blocks that contain multiple sections */
/* stylelint-disable-next-line no-descending-specificity */
.section:has(+ .v2-truck-lineup-container, + .v2-tabbed-carousel-wrapper) {
  padding-bottom: 0;
}
/* ... */

